src/styles/components/_decor.scss
@use '../abstracts/' as abstracts;
@use 'sass:color';

.decor {
    position: absolute;
    &__ticket {
        display: none;
    }
    &__orange-blur {
        border-radius: 50%;
        box-shadow: 0 0 300px 300px
            color.adjust(abstracts.$deep-orange, $alpha: -0.8);
    }
    &__arrow {
        display: none;
    }

    @include abstracts.responsive(tab) {
        &__ticket {
            display: none;
        }
        &__arrow {
            display: block;
            width: abstracts.pxToRem(67px);
            height: auto;
            top: 142.6%;
            left: abstracts.pxToRem(38px);
            overflow: hidden;
        }
        &__yellow-blur {
            border-radius: 50%;
            box-shadow: 0 0 300px 300px
                color.adjust(abstracts.$golden-yellow, $alpha: -0.8);
            right: -21%;
            top: 20%;
        }
    }

    @include abstracts.responsive(desktop) {
        &__ticket {
            display: flex;
            color: white;
            background-color: abstracts.$golden-yellow;
            font-size: abstracts.pxToRem(47px);
            border-radius: 50%;
            padding: abstracts.pxToRem(33px);
            left: 95.8%;
            top: 30%;
        }
        &__yellow-blur {
            border-radius: 50%;
            box-shadow: 0 0 300px 300px
                color.adjust(abstracts.$golden-yellow, $alpha: -0.8);
            right: -10%;
            top: 20%;
        }

        &__arrow {
            display: block;
            width: abstracts.pxToRem(67px);
            height: auto;
            top: 98%;
            left: abstracts.pxToRem(44px);
            overflow: hidden;
        }
    }
}

